--- a/Css/quiz.css
+++ b/Css/quiz.css
@@ -125,6 +125,7 @@ transition:all 0.3s ease-in-out;
 
 
 .bottom{
+    margin-top: 2em;
     display: flex;
     justify-content: space-around;
 }
@@ -196,6 +197,10 @@ transition:all 0.3s ease-in-out;
         display: block;
         text-align: center;
         justify-content: center;
+    }
+    #question-container{
+       
+        padding: 25px;
     }
     
   
